[lworld] C2 compilation fails with assert(unc->peek_monitor_obj() == obj) failed: wrong monitor

XMLWordPrintable

      # Internal Error (workspace/open/src/hotspot/share/opto/macro.cpp:2553), pid=3042, tid=3055
      # assert(unc->peek_monitor_obj() == obj) failed: wrong monitor

      Current CompileTask:
      C2: 51001 4565 !b jdk.internal.reflect.GeneratedMethodAccessor86::invoke (89 bytes)

      Stack: [0x00007fc3cc8f8000,0x00007fc3cc9f9000], sp=0x00007fc3cc9f44a0, free space=1009k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x13f4e90] PhaseMacroExpand::expand_lock_node(LockNode*)+0xeb0
      V [libjvm.so+0x14019cf] PhaseMacroExpand::expand_macro_nodes()+0xc9f
      V [libjvm.so+0xa524a4] Compile::Optimize()+0x1774
      V [libjvm.so+0xa541bd] Compile::Compile(ciEnv*, ciMethod*, int, bool, bool, bool, bool, DirectiveSet*)+0x19dd
      V [libjvm.so+0x86f9ca] C2Compiler::compile_method(ciEnv*, ciMethod*, int, bool, DirectiveSet*)+0x1ea
      V [libjvm.so+0xa647f8] CompileBroker::invoke_compiler_on_method(CompileTask*)+0xe08
      V [libjvm.so+0xa65348] CompileBroker::compiler_thread_loop()+0x5a8
      V [libjvm.so+0x1990ec6] JavaThread::thread_main_inner()+0x256
      V [libjvm.so+0x1997840] Thread::call_run()+0x100
      V [libjvm.so+0x1652756] thread_native_entry(Thread*)+0x116

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: