src/hotspot/share/opto/callnode.hpp
@@ -642,8 +642,8 @@ public:
   // Returns true if the call may modify n
   virtual bool        may_modify(const TypeOopPtr *t_oop, PhaseTransform *phase);
   // Does this node have a use of n other than in debug information?
-  bool                has_non_debug_use(Node *n);
-  bool                has_debug_use(Node *n);
+  bool                has_non_debug_use(Node* n);
+  bool                has_debug_use(Node* n);
   // Returns the unique CheckCastPP of a call
   // or result projection is there are several CheckCastPP
   // or returns NULL if there is no one.
