src/hotspot/share/opto/locknode.cpp
@@ -183,8 +183,8 @@ void Parse::do_monitor_enter() {
   kill_dead_locals();
 
   Node* obj = peek();
-
-  if (obj->is_InlineType()) {
+  const Type* obj_type = gvn().type(obj);
+  if (obj_type->isa_inlinetype() && !obj_type->is_inlinetypeptr()) {
     uncommon_trap(Deoptimization::Reason_class_check,
                   Deoptimization::Action_none);
     return;
